--- a/results/2021.md
+++ b/results/2021.md
@@ -1,372 +1,394 @@
 # Total Vaccinations
 Vax Type | Vaccinations
 --- | ---
-COVID19 | 354451
-UNK | 1459
-VARZOS | 567
-FLU4 | 397
-FLUX | 173
-FLUC4 | 154
-PNC13 | 89
-PPV | 89
-HPV9 | 66
-FLUA4 | 64
-TDAP | 61
-MMR | 53
-MNQ | 49
-HEPA | 48
-FLUR4 | 47
-VARCEL | 45
-HIBV | 40
-HEP | 34
-FLUA3 | 30
-MENB | 30
-DTAP | 29
-MMRV | 27
-DTAPIPVHIB | 25
-RV5 | 23
-DTAPHEPBIP | 21
-DTAPIPV | 20
-FLU3 | 13
-FLUC3 | 11
-HPV4 | 10
-ANTH | 8
-IPV | 8
-TYP | 8
-ADEN_4_7 | 8
-RV1 | 7
-RAB | 6
-FLUN4 | 5
-TTOX | 5
-CHOL | 4
-HEPAB | 4
-DT | 3
+COVID19 | 415452
+UNK | 2136
+VARZOS | 1041
+FLU4 | 495
+FLUX | 218
+FLUC4 | 161
+PNC13 | 136
+PPV | 110
+TDAP | 95
+HPV9 | 95
+MMR | 83
+MNQ | 74
+FLUA4 | 69
+HEPA | 65
+VARCEL | 64
+FLUR4 | 62
+HEP | 60
+HIBV | 58
+DTAP | 46
+MENB | 44
+MMRV | 42
+RV5 | 40
+DTAPIPVHIB | 39
+DTAPHEPBIP | 38
+DTAPIPV | 35
+FLUA3 | 33
+IPV | 22
+FLU3 | 16
+RV1 | 14
+HPV4 | 14
+ANTH | 14
+FLUC3 | 12
+ADEN_4_7 | 11
+RAB | 10
+CHOL | 9
+TYP | 9
+TTOX | 7
+HEPAB | 7
+FLUN4 | 6
+DT | 4
+FLUX(H1N1) | 4
+DF | 4
 HPVX | 3
-DF | 3
+RVX | 3
+YF | 3
 EBZR | 2
-RVX | 2
-FLUX(H1N1) | 2
+TD | 2
 MEN | 2
-YF | 2
 JEV1 | 2
-TD | 1
+FLU(H1N1) | 2
+SMALL | 2
 DTP | 1
 PNC | 1
 OPV | 1
 MENHIB | 1
 FLUN3 | 1
-SMALL | 1
+MNQHIB | 1
 ---
 Vax ID | Vaccinations
 --- | ---
-COVID19-MODERNA | 165407
-COVID19-PFIZER\BIONTECH | 148696
-COVID19-JANSSEN | 39433
-UNK-UNKNOWN MANUFACTURER | 1459
-COVID19-UNKNOWN MANUFACTURER | 915
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 301
-FLU4-SANOFI PASTEUR | 207
-FLUX-UNKNOWN MANUFACTURER | 172
-FLUC4-SEQIRUS, INC. | 154
-VARZOS-UNKNOWN MANUFACTURER | 153
-VARZOS-MERCK & CO. INC. | 113
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 102
-PNC13-PFIZER\WYETH | 89
-FLU4-SEQIRUS, INC. | 88
-PPV-MERCK & CO. INC. | 76
-HPV9-MERCK & CO. INC. | 66
-FLUA4-SEQIRUS, INC. | 64
-MMR-MERCK & CO. INC. | 52
-FLUR4-PROTEIN SCIENCES CORPORATION | 47
-VARCEL-MERCK & CO. INC. | 45
-MNQ-SANOFI PASTEUR | 35
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 30
-TDAP-SANOFI PASTEUR | 30
-MMRV-MERCK & CO. INC. | 27
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 26
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 26
-DTAPIPVHIB-SANOFI PASTEUR | 25
-RV5-MERCK & CO. INC. | 23
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 21
-HEPA-MERCK & CO. INC. | 21
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 20
-HIBV-SANOFI PASTEUR | 18
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 15
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 14
-PPV-UNKNOWN MANUFACTURER | 13
-HIBV-MERCK & CO. INC. | 13
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 13
-DTAP-SANOFI PASTEUR | 11
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 11
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 11
-HPV4-MERCK & CO. INC. | 10
-MENB-PFIZER\WYETH | 10
-DTAPIPV-SANOFI PASTEUR | 9
-FLU3-SANOFI PASTEUR | 9
-HEP-MERCK & CO. INC. | 9
-ADEN_4_7-TEVA PHARMACEUTICALS | 8
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 7
-IPV-SANOFI PASTEUR | 7
-ANTH-EMERGENT BIOSOLUTIONS | 6
+COVID19-MODERNA | 187970
+COVID19-PFIZER\BIONTECH | 184162
+COVID19-JANSSEN | 42357
+UNK-UNKNOWN MANUFACTURER | 2136
+COVID19-UNKNOWN MANUFACTURER | 963
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 461
+VARZOS-UNKNOWN MANUFACTURER | 419
+FLU4-SANOFI PASTEUR | 259
+FLUX-UNKNOWN MANUFACTURER | 205
+FLUC4-SEQIRUS, INC. | 161
+VARZOS-MERCK & CO. INC. | 161
+PNC13-PFIZER\WYETH | 136
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 124
+FLU4-SEQIRUS, INC. | 112
+PPV-MERCK & CO. INC. | 95
+HPV9-MERCK & CO. INC. | 95
+MMR-MERCK & CO. INC. | 80
+FLUA4-SEQIRUS, INC. | 69
+FLUR4-PROTEIN SCIENCES CORPORATION | 62
+VARCEL-MERCK & CO. INC. | 62
+MNQ-SANOFI PASTEUR | 50
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 45
+TDAP-SANOFI PASTEUR | 45
+MMRV-MERCK & CO. INC. | 42
+RV5-MERCK & CO. INC. | 40
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 38
+DTAPIPVHIB-SANOFI PASTEUR | 38
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 35
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 33
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 31
+HEPA-MERCK & CO. INC. | 29
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 28
+HIBV-SANOFI PASTEUR | 27
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 24
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 22
+HIBV-MERCK & CO. INC. | 21
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 20
+IPV-SANOFI PASTEUR | 19
+HEP-MERCK & CO. INC. | 18
+DTAP-SANOFI PASTEUR | 17
+PPV-UNKNOWN MANUFACTURER | 15
+DTAPIPV-SANOFI PASTEUR | 15
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 14
+HPV4-MERCK & CO. INC. | 14
+MENB-PFIZER\WYETH | 13
+FLUX-SANOFI PASTEUR | 13
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 12
+ANTH-EMERGENT BIOSOLUTIONS | 12
+ADEN_4_7-TEVA PHARMACEUTICALS | 11
+FLU3-SANOFI PASTEUR | 10
+HEP-UNKNOWN MANUFACTURER | 8
+CHOL-PAXVAX | 8
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 8
+DTAP-UNKNOWN MANUFACTURER | 7
+TTOX-UNKNOWN MANUFACTURER | 7
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 7
+FLUN4-MEDIMMUNE VACCINES, INC. | 6
 TYP-BERNA BIOTECH, LTD. | 6
-HEP-UNKNOWN MANUFACTURER | 5
-DTAP-UNKNOWN MANUFACTURER | 5
-FLUN4-MEDIMMUNE VACCINES, INC. | 5
-TTOX-UNKNOWN MANUFACTURER | 5
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 6
 TDAP-UNKNOWN MANUFACTURER | 5
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 5
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 5
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 5
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 4
-HIBV-UNKNOWN MANUFACTURER | 4
-CHOL-PAXVAX | 3
+HIBV-UNKNOWN MANUFACTURER | 5
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 4
+DF-SANOFI PASTEUR | 4
+TYP-SANOFI PASTEUR | 3
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 3
 HPVX-UNKNOWN MANUFACTURER | 3
-DF-SANOFI PASTEUR | 3
-TYP-SANOFI PASTEUR | 2
+RVX-UNKNOWN MANUFACTURER | 3
+IPV-UNKNOWN MANUFACTURER | 3
+DT-SANOFI PASTEUR | 3
+MMR-UNKNOWN MANUFACTURER | 3
+YF-SANOFI PASTEUR | 3
 EBZR-MERCK & CO. INC. | 2
-RVX-UNKNOWN MANUFACTURER | 2
-FLUX(H1N1)-UNKNOWN MANUFACTURER | 2
+FLU3-CSL LIMITED | 2
 ANTH-UNKNOWN MANUFACTURER | 2
-DT-SANOFI PASTEUR | 2
+RAB-UNKNOWN MANUFACTURER | 2
 MEN-UNKNOWN MANUFACTURER | 2
-YF-SANOFI PASTEUR | 2
 JEV1-INTERCELL AG | 2
 CHOL-UNKNOWN MANUFACTURER | 1
 DT-UNKNOWN MANUFACTURER | 1
-FLU3-CSL LIMITED | 1
 TD-UNKNOWN MANUFACTURER | 1
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 1
 DTP-UNKNOWN MANUFACTURER | 1
-IPV-UNKNOWN MANUFACTURER | 1
 PNC-PFIZER\WYETH | 1
-RAB-UNKNOWN MANUFACTURER | 1
 OPV-UNKNOWN MANUFACTURER | 1
+TD-MASS. PUB HLTH BIOL LAB | 1
 HEPA-UNKNOWN MANUFACTURER | 1
-MMR-UNKNOWN MANUFACTURER | 1
+VARCEL-UNKNOWN MANUFACTURER | 1
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
-FLUX-SANOFI PASTEUR | 1
+FLU(H1N1)-SANOFI PASTEUR | 1
+FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
+SMALL-SANOFI PASTEUR | 1
 FLUN3-MEDIMMUNE VACCINES, INC. | 1
 SMALL-UNKNOWN MANUFACTURER | 1
+FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 1
+MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
+VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 1
 ---
 # Total Deaths
 Vax Type | Deaths
 --- | ---
-COVID19 | 5062
-UNK | 107
-VARZOS | 15
+COVID19 | 5718
+UNK | 115
+VARZOS | 19
+FLU4 | 11
 FLUX | 11
-FLU4 | 10
+PNC13 | 11
+HEP | 8
 PPV | 6
-PNC13 | 6
-HEP | 5
-HIBV | 4
-HEPA | 3
+DTAPIPVHIB | 6
+HIBV | 5
+RV5 | 5
+HEPA | 4
 DTAP | 3
-DTAPIPVHIB | 3
+MMR | 2
+VARCEL | 2
 TDAP | 2
 RAB | 2
-RV5 | 2
+DTAPHEPBIP | 2
 MMRV | 2
 HPV9 | 2
-MMR | 1
-VARCEL | 1
-DTAPHEPBIP | 1
+RV1 | 2
 MENB | 1
 FLUR4 | 1
 MNQ | 1
 MEN | 1
 FLUC4 | 1
-RV1 | 1
 ---
 Vax ID | Deaths
 --- | ---
-COVID19-MODERNA | 2393
-COVID19-PFIZER\BIONTECH | 2227
-COVID19-JANSSEN | 417
-UNK-UNKNOWN MANUFACTURER | 107
+COVID19-MODERNA | 2656
+COVID19-PFIZER\BIONTECH | 2536
+COVID19-JANSSEN | 501
+UNK-UNKNOWN MANUFACTURER | 115
 COVID19-UNKNOWN MANUFACTURER | 25
 FLUX-UNKNOWN MANUFACTURER | 11
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 10
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 11
+PNC13-PFIZER\WYETH | 11
 FLU4-SANOFI PASTEUR | 9
-PNC13-PFIZER\WYETH | 6
+DTAPIPVHIB-SANOFI PASTEUR | 6
 PPV-MERCK & CO. INC. | 5
+RV5-MERCK & CO. INC. | 5
 VARZOS-MERCK & CO. INC. | 4
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 3
-DTAPIPVHIB-SANOFI PASTEUR | 3
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 2
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 4
+HEP-MERCK & CO. INC. | 4
+VARZOS-UNKNOWN MANUFACTURER | 4
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 3
+MMR-MERCK & CO. INC. | 2
+VARCEL-MERCK & CO. INC. | 2
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 2
+HIBV-MERCK & CO. INC. | 2
 RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 2
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 2
 HIBV-SANOFI PASTEUR | 2
-RV5-MERCK & CO. INC. | 2
 MMRV-MERCK & CO. INC. | 2
 DTAP-SANOFI PASTEUR | 2
-HEP-MERCK & CO. INC. | 2
 HPV9-MERCK & CO. INC. | 2
-MMR-MERCK & CO. INC. | 1
-VARCEL-MERCK & CO. INC. | 1
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 2
 HEP-DYNAVAX TECHNOLOGIES CORPORATION | 1
 TDAP-GLAXOSMITHKLINE BIOLOGICALS | 1
 DTAP-GLAXOSMITHKLINE BIOLOGICALS | 1
-HIBV-MERCK & CO. INC. | 1
 PPV-UNKNOWN MANUFACTURER | 1
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 1
 MENB-PFIZER\WYETH | 1
 FLUR4-PROTEIN SCIENCES CORPORATION | 1
 MNQ-SANOFI PASTEUR | 1
 TDAP-UNKNOWN MANUFACTURER | 1
 MEN-UNKNOWN MANUFACTURER | 1
 FLUC4-SEQIRUS, INC. | 1
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 1
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
-VARZOS-UNKNOWN MANUFACTURER | 1
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 1
 ---
 # Total Symptoms
 Vax Type | Symptoms
 --- | ---
-COVID19 | 1553295
-UNK | 7036
-VARZOS | 2177
-FLU4 | 1528
-FLUC4 | 574
-FLUX | 539
-HPV9 | 530
-PNC13 | 523
-PPV | 426
-FLUA4 | 313
-TDAP | 272
-MMR | 271
-VARCEL | 262
-HIBV | 237
-HEP | 230
-HEPA | 227
-MNQ | 216
-DTAPIPVHIB | 182
-DTAP | 160
-DTAPHEPBIP | 158
-RV5 | 144
-FLUR4 | 143
-MENB | 141
-HPV4 | 136
-MMRV | 110
-RV1 | 105
-DTAPIPV | 101
-FLUA3 | 100
-RAB | 48
-IPV | 45
-ANTH | 44
-FLUN4 | 40
+COVID19 | 1806848
+UNK | 9902
+VARZOS | 3804
+FLU4 | 1866
+PNC13 | 860
+FLUX | 805
+HPV9 | 668
+FLUC4 | 600
+PPV | 529
+TDAP | 472
+MMR | 390
+HEP | 381
+DTAPIPVHIB | 340
+VARCEL | 339
+RV5 | 326
+HIBV | 323
+FLUA4 | 323
+MNQ | 293
+HEPA | 272
+DTAPHEPBIP | 238
+DTAP | 211
+MENB | 189
+FLUR4 | 183
+MMRV | 168
+HPV4 | 156
+RV1 | 152
+DTAPIPV | 150
+FLUA3 | 108
+IPV | 102
+DF | 87
+ANTH | 82
+FLU3 | 71
+ADEN_4_7 | 52
+RAB | 52
+RVX | 49
+FLUN4 | 42
+FLUC3 | 39
 HPVX | 39
-ADEN_4_7 | 37
-FLUC3 | 34
-RVX | 33
-FLU3 | 28
-DF | 17
-TYP | 15
+CHOL | 33
+TYP | 28
+TTOX | 18
+YF | 17
+DT | 16
+HEPAB | 15
 JEV1 | 11
-DT | 10
-TTOX | 10
 EBZR | 10
 OPV | 10
-YF | 10
-CHOL | 8
-HEPAB | 7
-FLUX(H1N1) | 4
-TD | 3
+FLU(H1N1) | 10
+FLUX(H1N1) | 9
+MNQHIB | 5
+TD | 4
+SMALL | 4
 MEN | 3
 PNC | 2
-SMALL | 2
 DTP | 1
 MENHIB | 1
 FLUN3 | 1
 ---
 Vax ID | Symptoms
 --- | ---
-COVID19-MODERNA | 728916
-COVID19-PFIZER\BIONTECH | 632065
-COVID19-JANSSEN | 188106
-UNK-UNKNOWN MANUFACTURER | 7036
-COVID19-UNKNOWN MANUFACTURER | 4208
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 1378
-FLU4-SANOFI PASTEUR | 802
-FLUC4-SEQIRUS, INC. | 574
-FLUX-UNKNOWN MANUFACTURER | 538
-HPV9-MERCK & CO. INC. | 530
-PNC13-PFIZER\WYETH | 523
-VARZOS-UNKNOWN MANUFACTURER | 455
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 406
-PPV-MERCK & CO. INC. | 391
-VARZOS-MERCK & CO. INC. | 344
-FLU4-SEQIRUS, INC. | 320
-FLUA4-SEQIRUS, INC. | 313
-MMR-MERCK & CO. INC. | 267
-VARCEL-MERCK & CO. INC. | 262
-DTAPIPVHIB-SANOFI PASTEUR | 182
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 158
-MNQ-SANOFI PASTEUR | 151
-TDAP-SANOFI PASTEUR | 150
-RV5-MERCK & CO. INC. | 144
-FLUR4-PROTEIN SCIENCES CORPORATION | 143
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 139
-HIBV-SANOFI PASTEUR | 137
-HPV4-MERCK & CO. INC. | 136
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 112
-MMRV-MERCK & CO. INC. | 110
-RV1-GLAXOSMITHKLINE BIOLOGICALS | 105
-FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 100
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 92
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 89
-HEP-UNKNOWN MANUFACTURER | 86
-HEPA-MERCK & CO. INC. | 84
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 68
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 65
-HEP-MERCK & CO. INC. | 61
-HIBV-MERCK & CO. INC. | 56
-DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 51
-DTAPIPV-SANOFI PASTEUR | 50
-MENB-PFIZER\WYETH | 49
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 45
-FLUN4-MEDIMMUNE VACCINES, INC. | 40
+COVID19-MODERNA | 829299
+COVID19-PFIZER\BIONTECH | 772479
+COVID19-JANSSEN | 200622
+UNK-UNKNOWN MANUFACTURER | 9902
+COVID19-UNKNOWN MANUFACTURER | 4448
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 2115
+VARZOS-UNKNOWN MANUFACTURER | 1186
+FLU4-SANOFI PASTEUR | 998
+PNC13-PFIZER\WYETH | 860
+FLUX-UNKNOWN MANUFACTURER | 789
+HPV9-MERCK & CO. INC. | 668
+FLUC4-SEQIRUS, INC. | 600
+VARZOS-MERCK & CO. INC. | 503
+PPV-MERCK & CO. INC. | 476
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 474
+FLU4-SEQIRUS, INC. | 394
+MMR-MERCK & CO. INC. | 377
+DTAPIPVHIB-SANOFI PASTEUR | 338
+VARCEL-MERCK & CO. INC. | 331
+RV5-MERCK & CO. INC. | 326
+FLUA4-SEQIRUS, INC. | 323
+TDAP-SANOFI PASTEUR | 273
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 238
+MNQ-SANOFI PASTEUR | 193
+FLUR4-PROTEIN SCIENCES CORPORATION | 183
+HIBV-SANOFI PASTEUR | 174
+MMRV-MERCK & CO. INC. | 168
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 166
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 160
+HPV4-MERCK & CO. INC. | 156
+RV1-GLAXOSMITHKLINE BIOLOGICALS | 152
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 127
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 123
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 121
+HEP-MERCK & CO. INC. | 120
+HEP-UNKNOWN MANUFACTURER | 115
+FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 108
+HEPA-MERCK & CO. INC. | 108
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 100
+HIBV-MERCK & CO. INC. | 89
+DF-SANOFI PASTEUR | 87
+IPV-SANOFI PASTEUR | 86
+DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 78
+ANTH-EMERGENT BIOSOLUTIONS | 75
+DTAPIPV-SANOFI PASTEUR | 72
+MENB-PFIZER\WYETH | 68
+DTAP-SANOFI PASTEUR | 53
+PPV-UNKNOWN MANUFACTURER | 53
+ADEN_4_7-TEVA PHARMACEUTICALS | 52
+RVX-UNKNOWN MANUFACTURER | 49
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 48
+FLUN4-MEDIMMUNE VACCINES, INC. | 42
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 39
 HPVX-UNKNOWN MANUFACTURER | 39
-IPV-SANOFI PASTEUR | 38
-DTAP-SANOFI PASTEUR | 37
-ANTH-EMERGENT BIOSOLUTIONS | 37
-ADEN_4_7-TEVA PHARMACEUTICALS | 37
-PPV-UNKNOWN MANUFACTURER | 35
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 34
+HIBV-UNKNOWN MANUFACTURER | 37
 TDAP-UNKNOWN MANUFACTURER | 33
-RVX-UNKNOWN MANUFACTURER | 33
+DTAP-UNKNOWN MANUFACTURER | 31
+CHOL-PAXVAX | 31
+FLU3-SANOFI PASTEUR | 25
+FLU3-CSL LIMITED | 25
 HIBV-GLAXOSMITHKLINE BIOLOGICALS | 23
-HIBV-UNKNOWN MANUFACTURER | 21
-FLU3-SANOFI PASTEUR | 20
-DF-SANOFI PASTEUR | 17
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 15
-DTAP-UNKNOWN MANUFACTURER | 11
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 23
+TTOX-UNKNOWN MANUFACTURER | 18
+TYP-SANOFI PASTEUR | 18
+YF-SANOFI PASTEUR | 17
+FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 17
+FLUX-SANOFI PASTEUR | 16
+IPV-UNKNOWN MANUFACTURER | 16
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 15
+DT-SANOFI PASTEUR | 14
+MMR-UNKNOWN MANUFACTURER | 13
 JEV1-INTERCELL AG | 11
-TTOX-UNKNOWN MANUFACTURER | 10
 EBZR-MERCK & CO. INC. | 10
 TYP-BERNA BIOTECH, LTD. | 10
 OPV-UNKNOWN MANUFACTURER | 10
-YF-SANOFI PASTEUR | 10
-DT-SANOFI PASTEUR | 8
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 7
-IPV-UNKNOWN MANUFACTURER | 7
+FLUX(H1N1)-UNKNOWN MANUFACTURER | 9
 ANTH-UNKNOWN MANUFACTURER | 7
-CHOL-PAXVAX | 6
-TYP-SANOFI PASTEUR | 5
-FLU3-CSL LIMITED | 4
+FLU(H1N1)-SANOFI PASTEUR | 5
+FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 5
+MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 5
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 4
-FLUX(H1N1)-UNKNOWN MANUFACTURER | 4
+RAB-UNKNOWN MANUFACTURER | 4
 HEPA-UNKNOWN MANUFACTURER | 4
-MMR-UNKNOWN MANUFACTURER | 4
+VARCEL-UNKNOWN MANUFACTURER | 4
+VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 4
 TD-UNKNOWN MANUFACTURER | 3
-RAB-UNKNOWN MANUFACTURER | 3
 MEN-UNKNOWN MANUFACTURER | 3
 CHOL-UNKNOWN MANUFACTURER | 2
 DT-UNKNOWN MANUFACTURER | 2
+DTAPIPVHIB-UNKNOWN MANUFACTURER | 2
 PNC-PFIZER\WYETH | 2
+SMALL-SANOFI PASTEUR | 2
 SMALL-UNKNOWN MANUFACTURER | 2
 DTP-UNKNOWN MANUFACTURER | 1
+TD-MASS. PUB HLTH BIOL LAB | 1
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
-FLUX-SANOFI PASTEUR | 1
 FLUN3-MEDIMMUNE VACCINES, INC. | 1
 ---
