--- a/results/2021.md
+++ b/results/2021.md
@@ -1,55 +1,55 @@
 # Total Vaccinations
 Vax Type | Vaccinations
 --- | ---
-COVID19 | 415452
-UNK | 2136
-VARZOS | 1041
-FLU4 | 495
-FLUX | 218
-FLUC4 | 161
-PNC13 | 136
-PPV | 110
-TDAP | 95
-HPV9 | 95
-MMR | 83
-MNQ | 74
+COVID19 | 429009
+UNK | 2275
+VARZOS | 1094
+FLU4 | 511
+FLUX | 223
+FLUC4 | 162
+PNC13 | 147
+PPV | 119
+TDAP | 104
+HPV9 | 103
+MMR | 92
+VARCEL | 87
+HEPA | 77
+MNQ | 76
 FLUA4 | 69
-HEPA | 65
-VARCEL | 64
-FLUR4 | 62
-HEP | 60
-HIBV | 58
-DTAP | 46
-MENB | 44
-MMRV | 42
-RV5 | 40
-DTAPIPVHIB | 39
-DTAPHEPBIP | 38
-DTAPIPV | 35
+HEP | 67
+HIBV | 64
+FLUR4 | 63
+DTAP | 54
+MMRV | 48
+MENB | 46
+RV5 | 45
+DTAPIPVHIB | 44
+DTAPHEPBIP | 41
+DTAPIPV | 36
 FLUA3 | 33
-IPV | 22
-FLU3 | 16
+IPV | 26
+FLU3 | 18
+ANTH | 18
 RV1 | 14
 HPV4 | 14
-ANTH | 14
-FLUC3 | 12
+FLUC3 | 13
+RAB | 13
 ADEN_4_7 | 11
-RAB | 10
 CHOL | 9
 TYP | 9
+HEPAB | 8
 TTOX | 7
-HEPAB | 7
 FLUN4 | 6
+DF | 5
 DT | 4
 FLUX(H1N1) | 4
-DF | 4
+EBZR | 3
+TD | 3
 HPVX | 3
 RVX | 3
+JEV1 | 3
+MEN | 3
 YF | 3
-EBZR | 2
-TD | 2
-MEN | 2
-JEV1 | 2
 FLU(H1N1) | 2
 SMALL | 2
 DTP | 1
@@ -61,84 +61,85 @@ MNQHIB | 1
 ---
 Vax ID | Vaccinations
 --- | ---
-COVID19-MODERNA | 187970
-COVID19-PFIZER\BIONTECH | 184162
-COVID19-JANSSEN | 42357
-UNK-UNKNOWN MANUFACTURER | 2136
-COVID19-UNKNOWN MANUFACTURER | 963
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 461
-VARZOS-UNKNOWN MANUFACTURER | 419
-FLU4-SANOFI PASTEUR | 259
-FLUX-UNKNOWN MANUFACTURER | 205
-FLUC4-SEQIRUS, INC. | 161
-VARZOS-MERCK & CO. INC. | 161
-PNC13-PFIZER\WYETH | 136
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 124
-FLU4-SEQIRUS, INC. | 112
-PPV-MERCK & CO. INC. | 95
-HPV9-MERCK & CO. INC. | 95
-MMR-MERCK & CO. INC. | 80
+COVID19-MODERNA | 192274
+COVID19-PFIZER\BIONTECH | 191749
+COVID19-JANSSEN | 44001
+UNK-UNKNOWN MANUFACTURER | 2275
+COVID19-UNKNOWN MANUFACTURER | 985
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 496
+VARZOS-UNKNOWN MANUFACTURER | 424
+FLU4-SANOFI PASTEUR | 267
+FLUX-UNKNOWN MANUFACTURER | 210
+VARZOS-MERCK & CO. INC. | 174
+FLUC4-SEQIRUS, INC. | 162
+PNC13-PFIZER\WYETH | 147
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 128
+FLU4-SEQIRUS, INC. | 116
+PPV-MERCK & CO. INC. | 103
+HPV9-MERCK & CO. INC. | 103
+MMR-MERCK & CO. INC. | 89
+VARCEL-MERCK & CO. INC. | 85
 FLUA4-SEQIRUS, INC. | 69
-FLUR4-PROTEIN SCIENCES CORPORATION | 62
-VARCEL-MERCK & CO. INC. | 62
+FLUR4-PROTEIN SCIENCES CORPORATION | 63
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 50
 MNQ-SANOFI PASTEUR | 50
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 45
-TDAP-SANOFI PASTEUR | 45
-MMRV-MERCK & CO. INC. | 42
-RV5-MERCK & CO. INC. | 40
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 38
-DTAPIPVHIB-SANOFI PASTEUR | 38
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 35
+TDAP-SANOFI PASTEUR | 49
+MMRV-MERCK & CO. INC. | 48
+RV5-MERCK & CO. INC. | 45
+DTAPIPVHIB-SANOFI PASTEUR | 43
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 42
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 41
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 33
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 31
-HEPA-MERCK & CO. INC. | 29
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 28
-HIBV-SANOFI PASTEUR | 27
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 24
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 22
-HIBV-MERCK & CO. INC. | 21
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 33
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 33
+HEPA-MERCK & CO. INC. | 33
+HIBV-SANOFI PASTEUR | 29
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 26
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 24
+HIBV-MERCK & CO. INC. | 23
+IPV-SANOFI PASTEUR | 23
+DTAP-SANOFI PASTEUR | 22
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 20
-IPV-SANOFI PASTEUR | 19
-HEP-MERCK & CO. INC. | 18
-DTAP-SANOFI PASTEUR | 17
-PPV-UNKNOWN MANUFACTURER | 15
-DTAPIPV-SANOFI PASTEUR | 15
+HEP-MERCK & CO. INC. | 19
+PPV-UNKNOWN MANUFACTURER | 16
+DTAPIPV-SANOFI PASTEUR | 16
+ANTH-EMERGENT BIOSOLUTIONS | 16
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 14
 HPV4-MERCK & CO. INC. | 14
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 13
 MENB-PFIZER\WYETH | 13
 FLUX-SANOFI PASTEUR | 13
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 12
-ANTH-EMERGENT BIOSOLUTIONS | 12
+FLU3-SANOFI PASTEUR | 11
 ADEN_4_7-TEVA PHARMACEUTICALS | 11
-FLU3-SANOFI PASTEUR | 10
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 11
 HEP-UNKNOWN MANUFACTURER | 8
+DTAP-UNKNOWN MANUFACTURER | 8
 CHOL-PAXVAX | 8
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 8
-DTAP-UNKNOWN MANUFACTURER | 7
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 8
 TTOX-UNKNOWN MANUFACTURER | 7
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 7
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 7
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 7
 FLUN4-MEDIMMUNE VACCINES, INC. | 6
 TYP-BERNA BIOTECH, LTD. | 6
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 6
 TDAP-UNKNOWN MANUFACTURER | 5
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 5
+DF-SANOFI PASTEUR | 5
 HIBV-UNKNOWN MANUFACTURER | 5
 FLUX(H1N1)-UNKNOWN MANUFACTURER | 4
-DF-SANOFI PASTEUR | 4
 TYP-SANOFI PASTEUR | 3
+EBZR-MERCK & CO. INC. | 3
+FLU3-CSL LIMITED | 3
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 3
 HPVX-UNKNOWN MANUFACTURER | 3
 RVX-UNKNOWN MANUFACTURER | 3
 IPV-UNKNOWN MANUFACTURER | 3
 DT-SANOFI PASTEUR | 3
+JEV1-INTERCELL AG | 3
+MEN-UNKNOWN MANUFACTURER | 3
 MMR-UNKNOWN MANUFACTURER | 3
 YF-SANOFI PASTEUR | 3
-EBZR-MERCK & CO. INC. | 2
-FLU3-CSL LIMITED | 2
 ANTH-UNKNOWN MANUFACTURER | 2
 RAB-UNKNOWN MANUFACTURER | 2
-MEN-UNKNOWN MANUFACTURER | 2
-JEV1-INTERCELL AG | 2
+HEPA-UNKNOWN MANUFACTURER | 2
 CHOL-UNKNOWN MANUFACTURER | 1
 DT-UNKNOWN MANUFACTURER | 1
 TD-UNKNOWN MANUFACTURER | 1
@@ -147,10 +148,10 @@ DTP-UNKNOWN MANUFACTURER | 1
 PNC-PFIZER\WYETH | 1
 OPV-UNKNOWN MANUFACTURER | 1
 TD-MASS. PUB HLTH BIOL LAB | 1
-HEPA-UNKNOWN MANUFACTURER | 1
 VARCEL-UNKNOWN MANUFACTURER | 1
 MENHIB-GLAXOSMITHKLINE BIOLOGICALS | 1
 FLU(H1N1)-SANOFI PASTEUR | 1
+TD-SANOFI PASTEUR | 1
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 1
 SMALL-SANOFI PASTEUR | 1
 FLUN3-MEDIMMUNE VACCINES, INC. | 1
@@ -162,15 +163,15 @@ VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 1
 # Total Deaths
 Vax Type | Deaths
 --- | ---
-COVID19 | 5718
-UNK | 115
-VARZOS | 19
+COVID19 | 6000
+UNK | 121
+VARZOS | 21
+PNC13 | 12
 FLU4 | 11
 FLUX | 11
-PNC13 | 11
-HEP | 8
+HEP | 9
+DTAPIPVHIB | 7
 PPV | 6
-DTAPIPVHIB | 6
 HIBV | 5
 RV5 | 5
 HEPA | 4
@@ -191,22 +192,22 @@ FLUC4 | 1
 ---
 Vax ID | Deaths
 --- | ---
-COVID19-MODERNA | 2656
-COVID19-PFIZER\BIONTECH | 2536
-COVID19-JANSSEN | 501
-UNK-UNKNOWN MANUFACTURER | 115
-COVID19-UNKNOWN MANUFACTURER | 25
+COVID19-MODERNA | 2767
+COVID19-PFIZER\BIONTECH | 2685
+COVID19-JANSSEN | 522
+UNK-UNKNOWN MANUFACTURER | 121
+COVID19-UNKNOWN MANUFACTURER | 26
+PNC13-PFIZER\WYETH | 12
 FLUX-UNKNOWN MANUFACTURER | 11
 VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 11
-PNC13-PFIZER\WYETH | 11
 FLU4-SANOFI PASTEUR | 9
-DTAPIPVHIB-SANOFI PASTEUR | 6
+DTAPIPVHIB-SANOFI PASTEUR | 7
+VARZOS-UNKNOWN MANUFACTURER | 6
 PPV-MERCK & CO. INC. | 5
 RV5-MERCK & CO. INC. | 5
+HEP-MERCK & CO. INC. | 5
 VARZOS-MERCK & CO. INC. | 4
 HEPA-GLAXOSMITHKLINE BIOLOGICALS | 4
-HEP-MERCK & CO. INC. | 4
-VARZOS-UNKNOWN MANUFACTURER | 4
 HEP-GLAXOSMITHKLINE BIOLOGICALS | 3
 MMR-MERCK & CO. INC. | 2
 VARCEL-MERCK & CO. INC. | 2
@@ -234,59 +235,59 @@ HIBV-GLAXOSMITHKLINE BIOLOGICALS | 1
 # Total Symptoms
 Vax Type | Symptoms
 --- | ---
-COVID19 | 1806848
-UNK | 9902
-VARZOS | 3804
-FLU4 | 1866
-PNC13 | 860
-FLUX | 805
-HPV9 | 668
-FLUC4 | 600
-PPV | 529
-TDAP | 472
-MMR | 390
-HEP | 381
-DTAPIPVHIB | 340
-VARCEL | 339
-RV5 | 326
-HIBV | 323
+COVID19 | 1873330
+UNK | 10619
+VARZOS | 4061
+FLU4 | 1962
+PNC13 | 933
+FLUX | 829
+HPV9 | 721
+FLUC4 | 603
+PPV | 575
+TDAP | 524
+MMR | 431
+HEP | 415
+VARCEL | 415
+HEPA | 391
+RV5 | 356
+DTAPIPVHIB | 355
+HIBV | 341
 FLUA4 | 323
-MNQ | 293
-HEPA | 272
-DTAPHEPBIP | 238
-DTAP | 211
-MENB | 189
-FLUR4 | 183
-MMRV | 168
+MNQ | 301
+DTAP | 265
+DTAPHEPBIP | 245
+MENB | 196
+FLUR4 | 193
+MMRV | 185
 HPV4 | 156
 RV1 | 152
-DTAPIPV | 150
+DTAPIPV | 152
+ANTH | 128
+IPV | 117
 FLUA3 | 108
-IPV | 102
-DF | 87
-ANTH | 82
-FLU3 | 71
+DF | 91
+FLU3 | 76
+RAB | 75
 ADEN_4_7 | 52
-RAB | 52
 RVX | 49
 FLUN4 | 42
-FLUC3 | 39
+FLUC3 | 40
 HPVX | 39
 CHOL | 33
 TYP | 28
 TTOX | 18
+EBZR | 18
+JEV1 | 18
 YF | 17
 DT | 16
-HEPAB | 15
-JEV1 | 11
-EBZR | 10
+HEPAB | 16
 OPV | 10
 FLU(H1N1) | 10
 FLUX(H1N1) | 9
+TD | 6
 MNQHIB | 5
-TD | 4
+MEN | 4
 SMALL | 4
-MEN | 3
 PNC | 2
 DTP | 1
 MENHIB | 1
@@ -294,79 +295,80 @@ FLUN3 | 1
 ---
 Vax ID | Symptoms
 --- | ---
-COVID19-MODERNA | 829299
-COVID19-PFIZER\BIONTECH | 772479
-COVID19-JANSSEN | 200622
-UNK-UNKNOWN MANUFACTURER | 9902
-COVID19-UNKNOWN MANUFACTURER | 4448
-VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 2115
-VARZOS-UNKNOWN MANUFACTURER | 1186
-FLU4-SANOFI PASTEUR | 998
-PNC13-PFIZER\WYETH | 860
-FLUX-UNKNOWN MANUFACTURER | 789
-HPV9-MERCK & CO. INC. | 668
-FLUC4-SEQIRUS, INC. | 600
-VARZOS-MERCK & CO. INC. | 503
-PPV-MERCK & CO. INC. | 476
-FLU4-GLAXOSMITHKLINE BIOLOGICALS | 474
-FLU4-SEQIRUS, INC. | 394
-MMR-MERCK & CO. INC. | 377
-DTAPIPVHIB-SANOFI PASTEUR | 338
-VARCEL-MERCK & CO. INC. | 331
-RV5-MERCK & CO. INC. | 326
+COVID19-MODERNA | 851649
+COVID19-PFIZER\BIONTECH | 808155
+COVID19-JANSSEN | 208955
+UNK-UNKNOWN MANUFACTURER | 10619
+COVID19-UNKNOWN MANUFACTURER | 4571
+VARZOS-GLAXOSMITHKLINE BIOLOGICALS | 2316
+VARZOS-UNKNOWN MANUFACTURER | 1198
+FLU4-SANOFI PASTEUR | 1034
+PNC13-PFIZER\WYETH | 933
+FLUX-UNKNOWN MANUFACTURER | 813
+HPV9-MERCK & CO. INC. | 721
+FLUC4-SEQIRUS, INC. | 603
+VARZOS-MERCK & CO. INC. | 547
+PPV-MERCK & CO. INC. | 515
+FLU4-GLAXOSMITHKLINE BIOLOGICALS | 504
+FLU4-SEQIRUS, INC. | 424
+MMR-MERCK & CO. INC. | 418
+VARCEL-MERCK & CO. INC. | 407
+RV5-MERCK & CO. INC. | 356
+DTAPIPVHIB-SANOFI PASTEUR | 353
 FLUA4-SEQIRUS, INC. | 323
-TDAP-SANOFI PASTEUR | 273
-DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 238
+TDAP-SANOFI PASTEUR | 296
+DTAPHEPBIP-GLAXOSMITHKLINE BIOLOGICALS | 245
+HEPA-GLAXOSMITHKLINE BIOLOGICALS | 219
+TDAP-GLAXOSMITHKLINE BIOLOGICALS | 195
+FLUR4-PROTEIN SCIENCES CORPORATION | 193
 MNQ-SANOFI PASTEUR | 193
-FLUR4-PROTEIN SCIENCES CORPORATION | 183
-HIBV-SANOFI PASTEUR | 174
-MMRV-MERCK & CO. INC. | 168
-TDAP-GLAXOSMITHKLINE BIOLOGICALS | 166
-HEPA-GLAXOSMITHKLINE BIOLOGICALS | 160
+MMRV-MERCK & CO. INC. | 185
+HIBV-SANOFI PASTEUR | 178
 HPV4-MERCK & CO. INC. | 156
 RV1-GLAXOSMITHKLINE BIOLOGICALS | 152
-DTAP-GLAXOSMITHKLINE BIOLOGICALS | 127
-HEP-GLAXOSMITHKLINE BIOLOGICALS | 123
-MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 121
-HEP-MERCK & CO. INC. | 120
+HEPA-MERCK & CO. INC. | 148
+HEP-GLAXOSMITHKLINE BIOLOGICALS | 146
+DTAP-GLAXOSMITHKLINE BIOLOGICALS | 134
+MENB-NOVARTIS VACCINES AND DIAGNOSTICS | 128
+HEP-MERCK & CO. INC. | 121
+ANTH-EMERGENT BIOSOLUTIONS | 121
 HEP-UNKNOWN MANUFACTURER | 115
 FLUA3-NOVARTIS VACCINES AND DIAGNOSTICS | 108
-HEPA-MERCK & CO. INC. | 108
-MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 100
-HIBV-MERCK & CO. INC. | 89
-DF-SANOFI PASTEUR | 87
-IPV-SANOFI PASTEUR | 86
+MNQ-NOVARTIS VACCINES AND DIAGNOSTICS | 108
+IPV-SANOFI PASTEUR | 101
+DTAP-SANOFI PASTEUR | 97
+HIBV-MERCK & CO. INC. | 96
+DF-SANOFI PASTEUR | 91
 DTAPIPV-GLAXOSMITHKLINE BIOLOGICALS | 78
-ANTH-EMERGENT BIOSOLUTIONS | 75
-DTAPIPV-SANOFI PASTEUR | 72
+DTAPIPV-SANOFI PASTEUR | 74
+RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 71
 MENB-PFIZER\WYETH | 68
-DTAP-SANOFI PASTEUR | 53
-PPV-UNKNOWN MANUFACTURER | 53
+PPV-UNKNOWN MANUFACTURER | 60
 ADEN_4_7-TEVA PHARMACEUTICALS | 52
 RVX-UNKNOWN MANUFACTURER | 49
-RAB-NOVARTIS VACCINES AND DIAGNOSTICS | 48
 FLUN4-MEDIMMUNE VACCINES, INC. | 42
-FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 39
+FLUC3-NOVARTIS VACCINES AND DIAGNOSTICS | 40
 HPVX-UNKNOWN MANUFACTURER | 39
 HIBV-UNKNOWN MANUFACTURER | 37
+DTAP-UNKNOWN MANUFACTURER | 34
 TDAP-UNKNOWN MANUFACTURER | 33
-DTAP-UNKNOWN MANUFACTURER | 31
+HEP-DYNAVAX TECHNOLOGIES CORPORATION | 33
 CHOL-PAXVAX | 31
-FLU3-SANOFI PASTEUR | 25
-FLU3-CSL LIMITED | 25
-HIBV-GLAXOSMITHKLINE BIOLOGICALS | 23
-HEP-DYNAVAX TECHNOLOGIES CORPORATION | 23
+HIBV-GLAXOSMITHKLINE BIOLOGICALS | 30
+FLU3-CSL LIMITED | 28
+FLU3-SANOFI PASTEUR | 27
+HEPA-UNKNOWN MANUFACTURER | 24
 TTOX-UNKNOWN MANUFACTURER | 18
 TYP-SANOFI PASTEUR | 18
+EBZR-MERCK & CO. INC. | 18
+JEV1-INTERCELL AG | 18
 YF-SANOFI PASTEUR | 17
 FLU3-NOVARTIS VACCINES AND DIAGNOSTICS | 17
+HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 16
 FLUX-SANOFI PASTEUR | 16
 IPV-UNKNOWN MANUFACTURER | 16
-HEPAB-GLAXOSMITHKLINE BIOLOGICALS | 15
 DT-SANOFI PASTEUR | 14
 MMR-UNKNOWN MANUFACTURER | 13
-JEV1-INTERCELL AG | 11
-EBZR-MERCK & CO. INC. | 10
 TYP-BERNA BIOTECH, LTD. | 10
 OPV-UNKNOWN MANUFACTURER | 10
 FLUX(H1N1)-UNKNOWN MANUFACTURER | 9
@@ -376,15 +378,15 @@ FLU(H1N1)-GLAXOSMITHKLINE BIOLOGICALS | 5
 MNQHIB-GLAXOSMITHKLINE BIOLOGICALS | 5
 FLU3-GLAXOSMITHKLINE BIOLOGICALS | 4
 RAB-UNKNOWN MANUFACTURER | 4
-HEPA-UNKNOWN MANUFACTURER | 4
+MEN-UNKNOWN MANUFACTURER | 4
 VARCEL-UNKNOWN MANUFACTURER | 4
 VARCEL-GLAXOSMITHKLINE BIOLOGICALS | 4
 TD-UNKNOWN MANUFACTURER | 3
-MEN-UNKNOWN MANUFACTURER | 3
 CHOL-UNKNOWN MANUFACTURER | 2
 DT-UNKNOWN MANUFACTURER | 2
 DTAPIPVHIB-UNKNOWN MANUFACTURER | 2
 PNC-PFIZER\WYETH | 2
+TD-SANOFI PASTEUR | 2
 SMALL-SANOFI PASTEUR | 2
 SMALL-UNKNOWN MANUFACTURER | 2
 DTP-UNKNOWN MANUFACTURER | 1
